sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value i
    if (isSmaller(i,i+1)) {
                  ^AlgGnomeSort:5: error: not found: value i
    if (isSmaller(i,i+1)) {
                    ^AlgGnomeSort:6: error: not found: value i
      i+=1
      ^AlgGnomeSort:8: error: not found: value i
      swap(i,i+1)
           ^AlgGnomeSort:8: error: not found: value i
      swap(i,i+1)
             ^AlgGnomeSort:9: error: not found: value i
      i-=1
      ^AlgGnomeSort:11: error: not found: value i
    if (i == -1) {
        ^AlgGnomeSort:12: error: not found: value i
      i=1
      ^