sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var gnome = 0
  while (gnome < getValueCount()-1) {
    if (isSmaller(i,i+1)) {
      i+=1
    } else {
      swap(i,i+1)
      i-=1
    }
    if (i == -1) {
      i=1
    }
  }
}